--- a/develop/src/poise/lib.rs.html
+++ b/develop/src/poise/lib.rs.html
@@ -383,7 +383,7 @@ See [`#[poise::command]`](command) for detailed information.
 
 ```rust
 use poise::serenity_prelude as serenity;
-struct Data {}
+type Data = ();
 type Error = Box&lt;dyn std::error::Error + Send + Sync&gt;;
 type Context&lt;&#39;a&gt; = poise::Context&lt;&#39;a, Data, Error&gt;;
 
@@ -422,7 +422,7 @@ async fn check(ctx: Context&lt;&#39;_&gt;) -&gt; Result&lt;bool, Error&gt; {
 }
 
 async fn error_handler(error: poise::FrameworkError&lt;&#39;_, Data, Error&gt;) {
-    println!(&quot;Oh noes, we got an error: {}&quot;, error);
+    println!(&quot;Oh noes, we got an error: {:?}&quot;, error);
 }
 ```
 
@@ -431,7 +431,7 @@ async fn error_handler(error: poise::FrameworkError&lt;&#39;_, Data, Error&gt;) 
 ```rust
 # type Error = Box&lt;dyn std::error::Error + Send + Sync&gt;;
 # type Context&lt;&#39;a&gt; = poise::Context&lt;&#39;a, (), Error&gt;;
-# async fn my_error_function(_: poise::FrameworkContext&lt;&#39;_, (), Error&gt;) {}
+# async fn my_error_function(_: poise::FrameworkError&lt;&#39;_, (), Error&gt;) {}
 # #[poise::command(prefix_command)] async fn command1(ctx: Context&lt;&#39;_&gt;) -&gt; Result&lt;(), Error&gt; { Ok(()) }
 # #[poise::command(prefix_command)] async fn command2(ctx: Context&lt;&#39;_&gt;) -&gt; Result&lt;(), Error&gt; { Ok(()) }
 # #[poise::command(prefix_command)] async fn command3(ctx: Context&lt;&#39;_&gt;) -&gt; Result&lt;(), Error&gt; { Ok(()) }
@@ -451,7 +451,7 @@ poise::Framework::build()
     // a struct literal (hint: use `..Default::default()` to fill uninitialized
     // settings with their default value):
     .options(poise::FrameworkOptions {
-        on_error: |err, ctx| Box::pin(my_error_function(err, ctx)),
+        on_error: |err| Box::pin(my_error_function(err)),
         prefix_options: poise::PrefixFrameworkOptions {
             prefix: Some(&quot;~&quot;.into()),
             edit_tracker: Some(poise::EditTracker::for_timespan(std::time::Duration::from_secs(3600))),
