deploy: 67ab09aa041b070c7b8644228ab14d9a8619caf2

--- a/develop/poise/attr.command.html
+++ b/develop/poise/attr.command.html
@@ -41,6 +41,9 @@ for example for command-specific help (i.e. <code>~help command_name</code>). Es
 <li><code>required_permissions</code>: Permissions which the command caller needs to have</li>
 <li><code>required_bot_permissions</code>: Permissions which the bot is known to need</li>
 <li><code>owners_only</code>: Restricts command callers to a configurable list of owners (see FrameworkOptions)</li>
+<li><code>guild_only</code>: Restricts command callers to only run on a guild</li>
+<li><code>dm_only</code>: Restricts command callers to only run on a DM</li>
+<li><code>nsfw_only</code>: Restricts command callers to only run on a NSFW channel</li>
 <li><code>identifying_name</code>: Optionally, a unique identifier for this command for your personal usage</li>
 <li><code>category</code>: Category of this command which affects placement in the help command</li>
 <li><code>global_cooldown</code>: Minimum duration between invocations, globally</li>
