deploy: 63f5eff74811ec3c6aceafda46a90a55a06f5131

--- a/develop/poise/attr.command.html
+++ b/develop/poise/attr.command.html
@@ -64,6 +64,7 @@ are multiple attributes you can use on parameters:</p>
 <li><code>#[description = &quot;&quot;]</code>: Sets description of the parameter (slash-only)</li>
 <li><code>#[autocomplete = &quot;&quot;]</code>: Sets the autocomplete callback (slash-only)</li>
 <li><code>#[channel_types(&quot;&quot;, &quot;&quot;)]</code>: For channel parameters, restricts allowed channel types (slash-only)</li>
+<li><code>#[rename = &quot;&quot;]</code>: Changes the user-facing name of the parameter (slash-only)</li>
 <li><code>#[min = 0]</code>: Minimum value for this number parameter (slash-only)</li>
 <li><code>#[max = 0]</code>: Maximum value for this number parameter (slash-only)</li>
 <li><code>#[rest]</code>: Use the entire rest of the message for this parameter (prefix-only)</li>
