deploy: 8f49befaa34e9c38b003ee64ea95d727a9bcaff9

--- a/develop/poise/attr.command.html
+++ b/develop/poise/attr.command.html
@@ -47,6 +47,7 @@ for example for command-specific help (i.e. <code>~help command_name</code>). Es
 <li><code>nsfw_only</code>: Restricts command callers to only run on a NSFW channel</li>
 <li><code>identifying_name</code>: Optionally, a unique identifier for this command for your personal usage</li>
 <li><code>category</code>: Category of this command which affects placement in the help command</li>
+<li><code>custom_data</code>: Arbitrary expression that will be boxed and stored in <code>Command::custom_data</code></li>
 <li><code>global_cooldown</code>: Minimum duration between invocations, globally</li>
 <li><code>user_cooldown</code>: Minimum duration between invocations, per user</li>
 <li><code>guild_cooldown</code>: Minimum duration between invocations, per guild</li>
