--- a/develop/src/poise/framework/builder.rs.html
+++ b/develop/src/poise/framework/builder.rs.html
@@ -376,7 +376,7 @@
     <span class="doccomment">/// # async fn command2(ctx: poise::Context&lt;&#39;_, (), Error&gt;) -&gt; Result&lt;(), Error&gt; { Ok(()) }</span>
     <span class="doccomment">///</span>
     <span class="doccomment">/// # #[allow(deprecated)] // just for this example</span>
-    <span class="doccomment">/// poise::Framework::build()</span>
+    <span class="doccomment">/// poise::Framework::builder()</span>
     <span class="doccomment">///     // framework setup...</span>
     <span class="doccomment">///     .commands([command1, command2])</span>
     <span class="doccomment">///     // framework startup...</span>
