--- a/develop/src/poise/lib.rs.html
+++ b/develop/src/poise/lib.rs.html
@@ -418,8 +418,8 @@ async fn error_handler(error: poise::FrameworkError&lt;&#39;_, Data, Error&gt;) 
 # #[poise::command(prefix_command)] async fn command3(ctx: Context&lt;&#39;_&gt;) -&gt; Result&lt;(), Error&gt; { Ok(()) }
 
 # async {
-// Use `Framework::build()` to create a framework builder and supply basic data to the framework:
-poise::Framework::build()
+// Use `Framework::builder()` to create a framework builder and supply basic data to the framework:
+poise::Framework::builder()
     .token(&quot;...&quot;)
     .user_data_setup(|_, _, _| Box::pin(async move {
         // construct user data here (invoked when bot connects to Discord)
